--- a/index.html
+++ b/index.html
@@ -13,14 +13,17 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
   <link rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@3.2.0/fonts/remixicon.css" rel="stylesheet">
   <link rel="stylesheet" href="/css/bootstrap.min.css">
   <link rel="stylesheet" href="/style.css">
-  <link rel="stylesheet" href="./css/flickety.css">
+  <link rel="stylesheet" href="./css/header.css">
+
+  <!-- <link rel="stylesheet" href="./css/flickety.css"> -->
 </head>
 
 <body>
 
-  <main class="ism-v3-header__topBar show-topBar">
+  <!-- <main class="ism-v3-header__topBar show-topBar">
     <div class="container-fluid">
       <div class="row">
         <div class="col-6 d-flex">
@@ -45,9 +48,9 @@
         </div>
       </div>
     </div>
-  </main>
+  </main> -->
 
-  <header class="ism-header__main_box1 ">
+  <!-- <header class="ism-header__main_box1 ">
     <div class="container-fluid">
       <div class="row">
         <div class="col-12">
@@ -155,7 +158,151 @@
             alt=""></a>
       </div>
     </nav>
-  </header>
+  </header> -->
+<!--=============== HEADER ===============-->
+<main class="ism-v3-header__topBar show-topBar">
+  <div class="container">
+    <div class="row">
+      <div class="d-flex justify-content-between">
+        <div class="d-flex">
+          <div class="date-time">23 October, 2024 | </div>
+          <div class="date-time"> &nbsp;04 : 12 : 09 PM</div>
+        </div>
+        <div class="special-feature">
+          <ul class="navbar-nav navList d-flex flex-row">
+            <li class="nav-item">
+              <a class="nav-link" href="#"> Skip to main content | </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#"> Screen Reader Access | </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#"> A A A+ A- A | </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#"> English</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+</main> 
+<div class="container logo-container">
+  <div class="row">
+    <div class="col-sm-12">
+      <div class="ism-header__main_box d-flex justify-content-between py-3">
+        <div class="ism-header__main_box text-left"><a aria-label="Miety logo" class="miety-logo"
+            href="https://www.meity.gov.in/" target="_blank"><img alt="Miety logo" class="img-fluid"
+              src="images/header/meity_header_logo.png"> </a>
+        </div>
+        <div class="ism-header__main_box text-center"><a aria-label="Miety logo" class="miety-logo"
+            href="/index.html"><img alt="Digital india logo" class="img-fluid"
+              src="images/header/ism_header_logo.png"></a>
+        </div>
+        <div class="ism-header__main_box text-right"><a aria-label="Miety logo" class="miety-logo"
+            href="https://dic.gov.in/" target="_blank"><img alt="Digital india logo" class="img-fluid"
+              src="images/header/digi_india_header_logo.png"></a>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<header class="header">
+  <nav class="nav container">
+     <!--=============== NAV MENU ===============-->
+     <div class="nav__menu" id="nav-menu">
+        <ul class="nav__list">
+           <li><a href="#" class="nav__link">Home</a></li>
+           <li class="dropdown__item">
+            <div class="nav__link">
+              About ISM <i class="ri-arrow-down-s-line dropdown__arrow"></i>
+            </div>           
+            <ul class="dropdown__menu">
+               <li><a class="dropdown__link" href="/our-ministers.html">Our Ministers</a></li> 
+                <li><a class="dropdown__link" href="/about-us.html">About ISM</a></li>
+                <li><a class="dropdown__link" href="/ism-vision.html">Vision and Objectives</a></li>
+                <li><a class="dropdown__link" href="/our-team.html">Our Team</a></li>
+                <li><a class="dropdown__link" href="/ism-commitee.html">ISM Committee</a></li> 
+                <li><a class="dropdown__link" href="/advisory-commitee.html">Advisory Committee</a></li>
+                <li><a class="dropdown__link" href="/useful-links.html">Useful Links</a></li>
+            </ul>
+         </li>
+         <li class="dropdown__item">
+          <div class="nav__link">
+            SemiconIndia <i class="ri-arrow-down-s-line dropdown__arrow"></i>
+          </div>           
+          <ul class="dropdown__menu">               
+             <li><a class="dropdown__link" href="/about-semicon.html">About SemiconIndia</a></li>
+             <li><a class="dropdown__link" href="https://ism.gov.in/semicon-2024.html">SEMICON INDIA 2024</a></li>
+             <li><a class="dropdown__link" href="https://ism.gov.in/semicon2023.html">SemiconIndia 2023</a></li>
+             <li> <a class="dropdown__link" href="https://ism.gov.in/semicon2022.html">SemiconIndia 2022</a></li>
+          </ul>
+       </li>
+       <li class="dropdown__item">
+        <div class="nav__link">
+          Schemes <i class="ri-arrow-down-s-line dropdown__arrow"></i>
+        </div>           
+        <ul class="dropdown__menu">
+           <li><a class="dropdown__link" href="/semiconductor-scheme.html">Semiconductor Fabs</a></li>
+           <li><a class="dropdown__link" href="/display-scheme.html">Display Fabs</a></li>
+           <li><a class="dropdown__link" href="/compound-scheme.html">Compound/ATMP/OSAT</a></li>
+           <li><a class="dropdown__link" href="/design-link-scheme.html">Design Linked Incentive</a></li>
+        </ul>
+     </li>
+     <li class="dropdown__item">
+      <div class="nav__link">
+        Notifications <i class="ri-arrow-down-s-line dropdown__arrow"></i>
+      </div>
+      <ul class="dropdown__menu">
+         <li>
+            <a class="dropdown__link"  href="#">Notices</a>                          
+         </li>
+
+         <li>
+            <a href="#" class="dropdown__link">Tenders</a>
+         </li>
+         <li>
+            <a href="#" class="dropdown__link">Downloads</a>
+         </li>
+         <li>
+          <a href="#" class="dropdown__link">Careers</a>
+       </li>
+      </ul>
+   </li>
+           <li><a href="#" class="nav__link">Gallery</a></li>
+           <li><a href="#" class="nav__link">Events</a></li>
+           <li><a href="#" class="nav__link">FAQs</a></li>
+           <li><a href="#" class="nav__link">Contact US</a></li>       
+        </ul>
+     </div>
+
+     <div class="nav__data">
+      <a href="#" class="nav__logo">
+        <img alt="Digital india logo" class="img-fluid"
+            src="images/header/ism_header_logo.png">
+      </a>
+      <div class="social-part">
+        <a href="https://x.com/Semicon_India"><img src="/images/header/x_header_icon.png" alt=""></a>
+        <a href="https://www.instagram.com/ism_indiasemiconductor/"><img src="/images/header/insta_header_icon.png"
+            alt=""></a>
+        <a href="https://www.linkedin.com/company/indiasemiconductormission/"><img
+            src="/images/header/linkedin_header_icon.png" alt=""></a>
+        <a href="https://www.youtube.com/@IndiaSemiconductorMission"><img src="/images/header/youtube_header_icon.png"
+            alt=""></a>
+      </div>
+      <div class="nav__toggle" id="nav-toggle">
+         <i class="ri-menu-line nav__burger"></i>
+         <i class="ri-close-line nav__close"></i>
+      </div>
+   </div>
+  </nav>
+</header>
+
+
+
+
+
   <section class="">
     <div class="">
       <div class="row">
@@ -166,21 +313,20 @@
     </div>
   </section>
 
-  <section class="">
-    <div class="">
+  <section class="ismv3-marquee">
+    <div class="container">
       <div class="row">
-        <div class="col-sm-12">
-          <div class="ismv3-marquee d-flex">
-            <div class="col-sm-2">
-              <p class="marquee-heading"><span class="marquee-icon"><img
+        <div class="d-flex justify-content-between align-content-center">  
+            <div class="align-content-center">
+              <p class="marquee-heading m-0"><span class="marquee-icon"><img
                     src="images/icons/announcement_icon.png"></span>Announcements :</p>
             </div>
-            <div class="col-sm-10 align-content-end">
+            <div class="align-content-center">
               <marquee>SEMICON INDIA 2024 - Positioning India as a Trusted Partner in the Global Semiconductor Supply
                 Chain.
               </marquee>
             </div>
-          </div>
+      
         </div>
       </div>
     </div>
@@ -894,15 +1040,6 @@
     </div>
   </section>
 
-  <!-- <section>
-  <div class="container">
-    <div class="row">
-      <div class="col"></div>
-      <div class="col"></div>
-      <div class="col"></div>
-    </div>
-  </div>
- </section> -->
   <footer class="ism-footer py-5">
     <div class="container">
       <div class="row">
@@ -988,12 +1125,8 @@
       <p>© Copyright India SemiConductor Mission. All Rights Reserved</p>
     </div>
   </section>
-
-
-
-
+  <script src="./js/header.js"></script>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-
   <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"></script> -->
   <script src="/js/bootstrap.bundle.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
