--- a/compound-scheme.html
+++ b/compound-scheme.html
@@ -4,34 +4,37 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
-  <link rel="stylesheet" href='https://fonts.googleapis.com/css?family=Poppins'>
+  <title>ISM Website</title>
+  <link rel="icon" href="/images/favicon.png" type="image/x-icon">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
+  <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"> -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
   <link rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
-    rel="stylesheet">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/css/bootstrap.min.css">
-
-  <link rel="stylesheet" href="/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@3.2.0/fonts/remixicon.css" rel="stylesheet">
+  <link rel="stylesheet" href="/css/bootstrap.min.css">
+<link rel="stylesheet" href="/style.css">
+<link rel="stylesheet" href="./css/header.css">
   <link rel="stylesheet" href="./css/pages/scheme.css">
 </head>
 
 <body>
 
-  <main class="ism-v3-header__topBar show-topBar">
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col-6 d-flex">
+<!--=============== HEADER ===============-->
+<main class="ism-v3-header__topBar show-topBar">
+  <div class="container">
+    <div class="row">
+      <div class="d-flex justify-content-between">
+        <div class="d-flex">
           <div class="date-time">23 October, 2024 | </div>
           <div class="date-time"> &nbsp;04 : 12 : 09 PM</div>
         </div>
-        <div class="col-6 d-flex justify-content-end">
+        <div class="special-feature">
           <ul class="navbar-nav navList d-flex flex-row">
             <li class="nav-item">
-              <a class="nav-link" href="#">Skip to main content | </a>
+              <a class="nav-link" href="#"> Skip to main content | </a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#"> Screen Reader Access | </a>
@@ -46,107 +49,102 @@
         </div>
       </div>
     </div>
-  </main>
-
-  <header class="ism-header__main_box1">
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col-12">
-          <div class="ism-header__main_box">
-            <div class="ism-header__main_box text-left"><a aria-label="Miety logo" class="miety-logo"
-                href="https://www.meity.gov.in/" target="_blank"><img alt="Miety logo" class="img-fluid"
-                  src="images/header/meity_header_logo.png"> </a>
-            </div>
-            <div class="ism-header__main_box text-center"><a aria-label="Miety logo" class="miety-logo"
-                href="/index.html" target="_blank"><img alt="Digital india logo" class="img-fluid"
-                  src="images/header/ism_header_logo.png"></a>
-            </div>
-            <div class="ism-header__main_box text-right"><a aria-label="Miety logo" class="miety-logo"
-                href="https://dic.gov.in/" target="_blank"><img alt="Digital india logo" class="img-fluid"
-                  src="images/header/digi_india_header_logo.png"></a>
-            </div>
-          </div>
+  </div>
+</main> 
+<div class="container logo-container">
+  <div class="row">
+    <div class="col-sm-12">
+      <div class="ism-header__main_box d-flex justify-content-between py-3">
+        <div class="ism-header__main_box text-left"><a aria-label="Miety logo" class="miety-logo"
+            href="https://www.meity.gov.in/" target="_blank"><img alt="Miety logo" class="img-fluid"
+              src="images/header/meity_header_logo.png"> </a>
+        </div>
+        <div class="ism-header__main_box text-center"><a aria-label="Miety logo" class="miety-logo"
+            href="/index.html"><img alt="Digital india logo" class="img-fluid"
+              src="images/header/ism_header_logo.png"></a>
+        </div>
+        <div class="ism-header__main_box text-right"><a aria-label="Miety logo" class="miety-logo"
+            href="https://dic.gov.in/" target="_blank"><img alt="Digital india logo" class="img-fluid"
+              src="images/header/digi_india_header_logo.png"></a>
         </div>
       </div>
     </div>
-
-    <nav class="navbar navbar-expand-sm navbar-light custom-header">
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link" href="/index.html">Home</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="aboutDropdown" data-toggle="dropdown" aria-haspopup="true"
-              aria-expanded="false">
-              About ISM
-            </a>
-            <div class="dropdown-menu" aria-labelledby="aboutDropdown">
-              <a class="dropdown-item" href="/our-ministers.html">Our Ministers</a>
-              <a class="dropdown-item" href="/about-us.html">About ISM</a>
-              <a class="dropdown-item" href="/ism-vision.html">Vision and Objectives</a>
-              <a class="dropdown-item" href="/our-team.html">Our Team</a>
-              <a class="dropdown-item" href="/ism-commitee.html">ISM Committee</a>
-              <a class="dropdown-item" href="/advisory-commitee.html">Advisory Committee</a>
-              <a class="dropdown-item" href="/useful-links.html">Useful Links</a>
-            </div>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="semiconDropdown" data-toggle="dropdown"
-              aria-haspopup="true" aria-expanded="false">
-              SemiconIndia
-            </a>
-            <div class="dropdown-menu" aria-labelledby="semiconDropdown">
-              <a class="dropdown-item" href="/about-semicon.html">About SemiconIndia</a>
-              <a class="dropdown-item" href="https://ism.gov.in/semicon-2024.html">SEMICON INDIA 2024</a>
-              <a class="dropdown-item" href="https://ism.gov.in/semicon2023.html">SemiconIndia 2023</a>
-              <a class="dropdown-item" href="https://ism.gov.in/semicon2022.html">SemiconIndia 2022</a>
-            </div>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="schemesDropdown" data-toggle="dropdown"
-              aria-haspopup="true" aria-expanded="false">
-              <span class="header-active">Schemes</span>
-            </a>
-            <div class="dropdown-menu" aria-labelledby="schemesDropdown">
-              <a class="dropdown-item" href="/semiconductor-scheme.html">Semiconductor Fabs</a>
-              <a class="dropdown-item" href="/display-scheme.html">Display Fabs</a>
-              <a class="dropdown-item" href="/compound-scheme.html">Compound/ATMP/OSAT</a>
-              <a class="dropdown-item" href="/design-link-scheme.html">Design Linked Incentive</a>
-            </div>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="schemesDropdown" data-toggle="dropdown"
-              aria-haspopup="true" aria-expanded="false">
-              Notifications
-            </a>
-            <div class="dropdown-menu" aria-labelledby="schemesDropdown">
-              <a class="dropdown-item" href="/notices.html">Notice</a>
-              <a class="dropdown-item" href="/tenders.html">Tenders</a>
-              <a class="dropdown-item" href="/downloads.html">Downloads</a>
-
-              <a class="dropdown-item" href="/career.html">Careers</a>
-            </div>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/gallery.html">Gallery</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/events.html">Events</a>
-          </li>
-
-          <li class="nav-item">
-            <a class="nav-link" href="/faqs.html">FAQs</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/contact-us.html">Contact Us</a>
-          </li>
+  </div>
+</div>
+<header class="header">
+  <nav class="nav container">
+     <!--=============== NAV MENU ===============-->
+     <div class="nav__menu" id="nav-menu">
+        <ul class="nav__list">
+           <li><a href="/index.html" class="nav__link">Home</a></li>
+           <li class="dropdown__item">
+            <div class="nav__link">
+              About ISM <i class="ri-arrow-down-s-line dropdown__arrow"></i>
+            </div>           
+            <ul class="dropdown__menu">
+               <li><a class="dropdown__link" href="/our-ministers.html">Our Ministers</a></li> 
+                <li><a class="dropdown__link" href="/about-us.html">About ISM</a></li>
+                <li><a class="dropdown__link" href="/ism-vision.html">Vision and Objectives</a></li>
+                <li><a class="dropdown__link" href="/our-team.html">Our Team</a></li>
+                <li><a class="dropdown__link" href="/ism-commitee.html">ISM Committee</a></li> 
+                <li><a class="dropdown__link" href="/advisory-commitee.html">Advisory Committee</a></li>
+                <li><a class="dropdown__link" href="/useful-links.html">Useful Links</a></li>
+            </ul>
+         </li>
+         <li class="dropdown__item">
+          <div class="nav__link">
+            SemiconIndia <i class="ri-arrow-down-s-line dropdown__arrow"></i>
+          </div>           
+          <ul class="dropdown__menu">               
+             <li><a class="dropdown__link" href="/about-semicon.html">About SemiconIndia</a></li>
+             <li><a class="dropdown__link" href="https://ism.gov.in/semicon-2024.html">SEMICON INDIA 2024</a></li>
+             <li><a class="dropdown__link" href="https://ism.gov.in/semicon2023.html">SemiconIndia 2023</a></li>
+             <li> <a class="dropdown__link" href="https://ism.gov.in/semicon2022.html">SemiconIndia 2022</a></li>
+          </ul>
+       </li>
+       <li class="dropdown__item">
+        <div class="nav__link">
+          Schemes <i class="ri-arrow-down-s-line dropdown__arrow"></i>
+        </div>           
+        <ul class="dropdown__menu">
+           <li><a class="dropdown__link" href="/semiconductor-scheme.html">Semiconductor Fabs</a></li>
+           <li><a class="dropdown__link" href="/display-scheme.html">Display Fabs</a></li>
+           <li><a class="dropdown__link" href="/compound-scheme.html">Compound/ATMP/OSAT</a></li>
+           <li><a class="dropdown__link" href="/design-link-scheme.html">Design Linked Incentive</a></li>
         </ul>
+     </li>
+     <li class="dropdown__item">
+      <div class="nav__link">
+        Notifications <i class="ri-arrow-down-s-line dropdown__arrow"></i>
       </div>
+      <ul class="dropdown__menu">
+         <li>
+            <a class="dropdown__link"  href="/notices.html">Notices</a>                          
+         </li>
+
+         <li>
+            <a href="/tenders.html" class="dropdown__link">Tenders</a>
+         </li>
+         <li>
+            <a href="/downloads.html" class="dropdown__link">Downloads</a>
+         </li>
+         <li>
+          <a href="/career.html" class="dropdown__link">Careers</a>
+       </li>
+      </ul>
+   </li>
+           <li><a href="/gallery.html" class="nav__link">Gallery</a></li>
+           <li><a href="/events.html" class="nav__link">Events</a></li>
+           <li><a href="/faqs.html" class="nav__link">FAQs</a></li>
+           <li><a href="/contact-us.html" class="nav__link">Contact US</a></li>       
+        </ul>
+     </div>
+
+     <div class="nav__data">
+      <a href="#" class="nav__logo">
+        <img alt="Digital india logo" class="img-fluid"
+            src="images/header/ism_header_logo.png">
+      </a>
       <div class="social-part">
         <a href="https://x.com/Semicon_India"><img src="/images/header/x_header_icon.png" alt=""></a>
         <a href="https://www.instagram.com/ism_indiasemiconductor/"><img src="/images/header/insta_header_icon.png"
@@ -156,8 +154,13 @@
         <a href="https://www.youtube.com/@IndiaSemiconductorMission"><img src="/images/header/youtube_header_icon.png"
             alt=""></a>
       </div>
-    </nav>
-  </header>
+      <div class="nav__toggle" id="nav-toggle">
+         <i class="ri-menu-line nav__burger"></i>
+         <i class="ri-close-line nav__close"></i>
+      </div>
+   </div>
+  </nav>
+</header>
 
   <section>
     <div>
@@ -493,7 +496,7 @@
   </footer>
   <section>
     <div class="ism-footer-copyright">
-      <p>© Copyright India SemiConductor Mission. All Rights Reserved</p>
+      <p class="m-0">© Copyright India SemiConductor Mission. All Rights Reserved</p>
     </div>
   </section>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
