content & sparsh feedback taks

--- a/events.html
+++ b/events.html
@@ -177,7 +177,7 @@
         <div class="col-md-6 col-lg-4">
           <a href="#">
             <div class="main-event-cards">
-              <img src="https://d37op362njfvp5.cloudfront.net/static/dist/images_2/banner/semi_2024_card.webp"
+              <img src="/images/momento.webp"
                 class="img-fluid br-8">
               <div class="event-content pt-3">
                 <h3>SEMICON INDIA 2024 - Positioning India as a trusted partner in the global Semiconductor Supply Chain</h3>
@@ -193,7 +193,7 @@
           <a href="#">
             <div class="main-event-cards">
               <img
-                src="https://d37op362njfvp5.cloudfront.net/static/dist/images_2/banner/SES_Thumbnail.webp"
+                src="https://ism.gov.in/static/dist/images_2/gallery/event_july_2023/35.JPG"
                 class="img-fluid br-8">
               <div class="event-content pt-3">
                 <h3>Semiconductor Executive' Summit (SES) 2024 - Positioning India as a trusted partner in the global semiconductor supply chain</h3>
@@ -357,11 +357,9 @@
       <p class="m-0">© Copyright India SemiConductor Mission. All Rights Reserved</p>
     </div>
   </section>
+  <script src="./js/header.js"></script>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script> -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
-  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script> -->
+  <script src="/js/bootstrap.bundle.min.js"></script>
 
 </body>
 
