--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
                     Committee shall determine the structure and quantum of fiscal support under the scheme for
                     establishing
                     the semiconductor fabs.</p>
-                  <div class="text-right px-3">
+                  <div class="text-end px-3">
                     <a href="/semiconductor-scheme.html" class="theme-Btn theme-Btn-dark">View
                       More<span><img src="./images/arrow-btn_icon.png" alt="" class="ml-3"></span></a>
                   </div>
@@ -370,7 +370,7 @@
                     Expenditure Finance Committee chaired by Secretary, Department of Expenditure. The Expenditure
                     Finance Committee shall determine the structure and quantum of fiscal support under the scheme for
                     establishing the display fabs.</p>
-                  <div class="text-right px-3">
+                  <div class="text-end px-3">
                     <a href="/display-scheme.html" class="theme-Btn theme-Btn-dark">View More<span><img
                           src="./images/arrow-btn_icon.png" alt="" class="ml-3"></span></a>
                   </div>
@@ -396,7 +396,7 @@
                     Fabs / Discrete Semiconductors Fab and Semiconductor ATMP / OSAT facilities in India shall extend
                     fiscal support of 50% of capital expenditure to Compound Semiconductors / Silicon Photonics /
                     Sensors (including MEMS) Fabs and Semiconductor Packaging (ATMP / OSAT) units.</p>
-                  <div class="text-right px-3">
+                  <div class="text-end px-3">
                     <a href="/compound-scheme.html" class="theme-Btn theme-Btn-dark">View More<span><img
                           src="./images/arrow-btn_icon.png" alt="" class="ml-3"></span></a>
                   </div>
@@ -422,7 +422,7 @@
                     infrastructure support across various stages of development and deployment of semiconductor
                     design(s) for Integrated Circuits (ICs), Chipsets, System on Chips (SoCs), Systems & IP Cores and
                     semiconductor linked design(s) over a period of 5 years.</p>
-                  <div class="text-right px-3">
+                  <div class="text-end px-3">
                     <a href="design-link-scheme.html" class="theme-Btn theme-Btn-dark">View
                       More<span><img src="./images/arrow-btn_icon.png" alt="" class="ml-3"></span></a>
                   </div>
