--- a/contact-us.html
+++ b/contact-us.html
@@ -159,14 +159,12 @@
    </div>
   </nav>
 </header>
-
-
   <section>
     <div>
       <div class="row">
         <div class="col-sm-12">
           <div class="page-main-banner">
-            <h3>Contact US</h3>
+            <h3>Contact Us</h3>
           </div>
         </div>
       </div>
@@ -199,6 +197,13 @@
                   </td>
                   <td><a href="mailto:ism-dic@gov.in">ism-dic@gov.in</a></td>
                   <td>011-24301865</td>
+                </tr>
+                <tr>
+                  <td>CEO, ISM</td>
+                  <td>
+                  </td>
+                  <td><a href="mailto:ceo@ism.gov.in">ceo@ism.gov.in</a></td>
+                  <td>011-24369903</td>
                 </tr>
                 <tr>
                   <td>Semiconductor Fabs</td>
@@ -321,11 +326,9 @@
       <p class="m-0">© Copyright India SemiConductor Mission. All Rights Reserved</p>
     </div>
   </section>
+  <script src="./js/header.js"></script>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script> -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
-  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script> -->
+  <script src="/js/bootstrap.bundle.min.js"></script>
 
 </body>
 
