--- a/downloads.html
+++ b/downloads.html
@@ -396,11 +396,9 @@
       <p class="m-0">© Copyright India SemiConductor Mission. All Rights Reserved</p>
     </div>
   </section>
+  <script src="./js/header.js"></script>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script> -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
-  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script> -->
+  <script src="/js/bootstrap.bundle.min.js"></script>
 
 </body>
 
