--- a/our-ministers.html
+++ b/our-ministers.html
@@ -178,8 +178,8 @@
       <div class="row">
         <div class="col-12">
         <div class="ism-generic_tabbing v3">
-        <ul class="nav nav-tabs" id="myTab" role="tablist">
-          <li class="nav-item mr-3" role="presentation"><button aria-controls="current" aria-selected="false" class="nav-link active" data-bs-target="#current" data-bs-toggle="tab" id="current-tab" role="tab" type="button"><span>Minister of Electronics &amp; Information Technology</span></button></li>
+        <ul class="nav navs nav-tabs" id="myTab" role="tablist">
+          <li class="nav-item" role="presentation"><button aria-controls="current" aria-selected="false" class="nav-link active" data-bs-target="#current" data-bs-toggle="tab" id="current-tab" role="tab" type="button"><span>Minister of Electronics &amp; Information Technology</span></button></li>
           <li class="nav-item" role="presentation"><button aria-controls="archive" aria-selected="true" class="nav-link" data-bs-target="#archive" data-bs-toggle="tab" id="archive-tab" role="tab" type="button"><span>Minister of State&nbsp;for Electronics and Information Technology</span><br><span></span></button></li>
         </ul>
         
@@ -631,9 +631,9 @@
       <p class="m-0">© Copyright India SemiConductor Mission. All Rights Reserved</p>
     </div>
   </section>
+  <script src="./js/header.js"></script>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"></script>
-  <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script> -->
+  <script src="/js/bootstrap.bundle.min.js"></script>
 
 </body>
 
