--- a/sitemap.html
+++ b/sitemap.html
@@ -192,29 +192,6 @@
                 Committee</a><a class="ism-sitemap__info_item" href="/useful-links.html">Useful Links</a>
             </div>
           </div>
-        </div>
-
-        <div class="col-md-3 col-lg-3">
-          <div class="ism-sitemap__info">
-            <div class="ism-sitemap__info_head">SemiconIndia</div>
-
-            <div class="ism-sitemap__info_content"><a class="ism-sitemap__info_item" href="/about-semicon.html">About
-              SemiconIndia Programme</a> <a class="ism-sitemap__info_item" href="#">2024</a><a
-                class="ism-sitemap__info_item" href="#">2023</a> <a class="ism-sitemap__info_item" href="#">2022</a> <a
-                class="ism-sitemap__info_item" href="#">Workshop on MEITY-NSF</a> <a class="ism-sitemap__info_item"
-                href="#">Semiconindia Conference 2023</a></div>
-          </div>
-        </div>
-
-        <div class="col-md-3 col-lg-3">
-          <div class="ism-sitemap__info">
-            <div class="ism-sitemap__info_head">Schemes</div>
-
-            <div class="ism-sitemap__info_content"><a class="ism-sitemap__info_item" href="#">Semiconductor Fabs</a> <a
-                class="ism-sitemap__info_item" href="#">Display Fabs</a> <a class="ism-sitemap__info_item"
-                href="#">Compound/ATMP/OSAT</a> <a class="ism-sitemap__info_item"
-                href="#">Design Linked Incentive</a></div>
-          </div>
           &nbsp;
           <div class="ism-sitemap__info">
             <div class="ism-sitemap__info_head">Social Links</div>
@@ -230,21 +207,71 @@
         </div>
 
         <div class="col-md-3 col-lg-3">
+   
+          <div class="ism-sitemap__info">
+            <div class="ism-sitemap__info_head">SemiconIndia</div>
+
+            <div class="ism-sitemap__info_content"><a class="ism-sitemap__info_item" href="/about-semicon.html">About SemiconIndia</a> <a class="ism-sitemap__info_item" href="#">SEMICON INDIA 2024</a><a
+                class="ism-sitemap__info_item" href="#">SemiconIndia 2023</a> <a class="ism-sitemap__info_item" href="#">SemiconIndia 2022</a> </div>
+          </div>
+          &nbsp;
+          <div class="ism-sitemap__info">
+            <div class="ism-sitemap__info_head">Gallery</div>
+
+            <div class="ism-sitemap__info_content">
+              <a class="ism-sitemap__info_item" href="/about-semicon.html">SEMICON INDIA 2024</a>
+              <a class="ism-sitemap__info_item" href="#">Semiconductor Executives' Summit (SES) 2024</a>
+              <a class="ism-sitemap__info_item" href="#">SemiconIndia 2023 </a>
+              <a class="ism-sitemap__info_item" href="#">SemiconIndia Conference 2023 </a> 
+              <a class="ism-sitemap__info_item" href="#">Semicon India 2022</a> 
+          </div>
+        </div>
+        </div>
+        <div class="col-md-3 col-lg-3">
+          <div class="ism-sitemap__info">
+            <div class="ism-sitemap__info_head">Schemes</div>
+
+            <div class="ism-sitemap__info_content"><a class="ism-sitemap__info_item" href="#">Semiconductor Fabs</a> <a
+                class="ism-sitemap__info_item" href="#">Display Fabs</a> <a class="ism-sitemap__info_item"
+                href="#">Compound/ATMP/OSAT</a> <a class="ism-sitemap__info_item"
+                href="#">Design Linked Incentive</a></div>
+          </div>
+          &nbsp;
+          <div class="ism-sitemap__info">
+            <div class="ism-sitemap__info_head">Events</div>
+            <div class="ism-sitemap__info_content"> 
+              <a class="ism-sitemap__info_item" href="#">SEMICON INDIA 2024</a>
+              <a class="ism-sitemap__info_item" href="#">Semiconductor Executives' Summit (SES) 2024</a>
+              <a class="ism-sitemap__info_item" href="#">Workshop on MEITY</a> 
+              <a class="ism-sitemap__info_item" href="#">SemiconIndia 2023</a>
+              <a class="ism-sitemap__info_item" href="#">SemiconIndia Conference 2023 </a> 
+              <a class="ism-sitemap__info_item" href="#">Semicon India 2022</a> 
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-3 col-lg-3">
+          <div class="ism-sitemap__info">
+            <div class="ism-sitemap__info_head">Notifications</div>
+
+            <div class="ism-sitemap__info_content">            
+              <a class="ism-sitemap__info_item" href="/notices.html">Notices</a> 
+              <a class="ism-sitemap__info_item" href="/tenders.html">Tenders</a>
+              <a class="ism-sitemap__info_item" href="/downloads.html">Downloads</a> 
+              <a class="ism-sitemap__info_item" href="/career.html">Careers</a>
+              </div>
+          </div>
+          &nbsp;
           <div class="ism-sitemap__info">
             <div class="ism-sitemap__info_head">Quick Links</div>
 
-            <div class="ism-sitemap__info_content"><a class="ism-sitemap__info_item" href="/events.html">Events</a> <a
-                class="ism-sitemap__info_item" href="/downloads.html">Downloads</a> <a class="ism-sitemap__info_item"
-                href="#">Gallery</a><a class="ism-sitemap__info_item" href="/gallery-details.html">Gallery July
-                2023</a><a class="ism-sitemap__info_item" href="/gallery-details.html">Gallery Feb 2023</a><a class="ism-sitemap__info_item"
-                href="/gallery-details.html">Gallery April 2022</a><a class="ism-sitemap__info_item" href="/contact-us.html">Contact Us</a><a
-                class="ism-sitemap__info_item" href="/contact-us.html">Reach Us</a><a class="ism-sitemap__info_item"
-                href="/career.html">Career</a><a
-                class="ism-sitemap__info_item" href="/tenders.html">Tenders</a><a class="ism-sitemap__info_item"
-                href="#">Notifications</a>  <a class="ism-sitemap__info_item" href="/faqs.html">FAQ’s</a> <a
-                class="ism-sitemap__info_item" href="/website-policies.html">Website Policies</a>
-                <a class="ism-sitemap__info_item"
-                href="/privacy-policies.html">Privacy Policies</a></div>
+            <div class="ism-sitemap__info_content">
+              <a class="ism-sitemap__info_item" href="/gallery.html">Gallery</a>
+              <a class="ism-sitemap__info_item" href="/events.html">Events</a>
+              <a class="ism-sitemap__info_item" href="/faqs.html">FAQ’s</a>
+              <a class="ism-sitemap__info_item" href="/contact-us.html">Contact Us</a>
+              <a class="ism-sitemap__info_item" href="/website-policies.html">Website Policies</a>
+              <a class="ism-sitemap__info_item" href="/privacy-policies.html">Privacy Policy</a></div>
           </div>
         </div>
       </div>
@@ -336,11 +363,9 @@
       <p class="m-0">© Copyright India SemiConductor Mission. All Rights Reserved</p>
     </div>
   </section>
+  <script src="./js/header.js"></script>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script> -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
-  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script> -->
+  <script src="/js/bootstrap.bundle.min.js"></script>
 
 </body>
 
