--- a/website-policies.html
+++ b/website-policies.html
@@ -180,7 +180,7 @@
         <div class="col-sm-12">
           <div class="">
             <h2 class="sub-heading">Hyper linking Policy</h2>
-            <h3 class="main-heading mb-3"><strong>Links to external websites/portals</strong></h3>
+            <h3 class="main-heading mb-3"><strong class="text-capitalize">Links to external websites/portals</strong></h3>
             <p>We do not object to you linking directly to the information that is hosted on our site, and no prior permission is required for the same. However, we would like you to inform us about any links provided to our site so that you can be informed of any changes or updates therein. Also, we do not permit our pages to be loaded into frames on your site. Our website’s pages must load into a newly opened browser window for the user.</p>
             <h2 class="sub-heading">Intellectual Property Rights Policy</h2>
             <p>The intellectual property rights of the framework, logos, website, themes, and related content, such as user manuals, FAQs, Help, Website Policies, and Terms of Use, are exclusively owned by ISM. Any use or distribution may be done with explicit permission from ISM. Any infringements of the same, any misuse or inappropriate use will be liable for prosecution.</p>
@@ -278,11 +278,9 @@
       <p class="m-0">© Copyright India SemiConductor Mission. All Rights Reserved</p>
     </div>
   </section>
+  <script src="./js/header.js"></script>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script> -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
-  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script> -->
+  <script src="/js/bootstrap.bundle.min.js"></script>
 
 </body>
 
