--- a/sitemap.html
+++ b/sitemap.html
@@ -139,7 +139,7 @@
            <li><a href="/gallery.html" class="nav__link">Gallery</a></li>
            <li><a href="/events.html" class="nav__link">Events</a></li>
            <li><a href="/faqs.html" class="nav__link">FAQs</a></li>
-           <li><a href="/contact-us.html" class="nav__link">Contact US</a></li>       
+           <li><a href="/contact-us.html" class="nav__link">Contact Us</a></li>       
         </ul>
      </div>
 
@@ -149,12 +149,12 @@
             src="images/header/ism_header_logo.png">
       </a>
       <div class="social-part">
-        <a href="https://x.com/Semicon_India"><img src="/images/header/x_header_icon.png" alt=""></a>
-        <a href="https://www.instagram.com/ism_indiasemiconductor/"><img src="/images/header/insta_header_icon.png"
+        <a href="https://x.com/Semicon_India" target="_blank"><img src="/images/header/x_header_icon.png" alt=""></a>
+        <a href="https://www.instagram.com/ism_indiasemiconductor/" target="_blank"><img src="/images/header/insta_header_icon.png"
             alt=""></a>
-        <a href="https://www.linkedin.com/company/indiasemiconductormission/"><img
+        <a href="https://www.linkedin.com/company/indiasemiconductormission/" target="_blank"><img
             src="/images/header/linkedin_header_icon.png" alt=""></a>
-        <a href="https://www.youtube.com/@IndiaSemiconductorMission"><img src="/images/header/youtube_header_icon.png"
+        <a href="https://www.youtube.com/@IndiaSemiconductorMission" target="_blank"><img src="/images/header/youtube_header_icon.png"
             alt=""></a>
       </div>
       <div class="nav__toggle" id="nav-toggle">
@@ -188,7 +188,7 @@
             <div class="ism-sitemap__info_content">
               <a class="ism-sitemap__info_item" href="#">Our Ministers</a><!-- <a class="ism-sitemap__info_item" href="/our-ministers-state">Our Ministers of State</a> --><a
                 class="ism-sitemap__info_item" href="about-us.html">About ISM</a><a class="ism-sitemap__info_item" href="/ism-vision.html">Vision & Objectives</a> <a
-                class="ism-sitemap__info_item" href="/our-team.html">Our Team</a><a class="ism-sitemap__info_item" href="/ism-commitee.html">Ism Committee</a> <a class="ism-sitemap__info_item" href="/advisory-commitee.html">Advisory
+                class="ism-sitemap__info_item" href="/our-team.html">Our Team</a><a class="ism-sitemap__info_item" href="/ism-commitee.html">ISM Committee</a> <a class="ism-sitemap__info_item" href="/advisory-commitee.html">Advisory
                 Committee</a><a class="ism-sitemap__info_item" href="/useful-links.html">Useful Links</a>
             </div>
           </div>
@@ -197,12 +197,12 @@
             <div class="ism-sitemap__info_head">Social Links</div>
 
             <div class="ism-sitemap__info_content"><a class="ism-sitemap__info_item"
-                href="https://twitter.com/i/flow/login?redirect_after_login=%2FSemicon_India">Twitter</a> <a
-                class="ism-sitemap__info_item" href="https://www.youtube.com/@IndiaSemiconductorMission">YouTube</a> <a
+                href="https://twitter.com/i/flow/login?redirect_after_login=%2FSemicon_India" target="_blank">Twitter</a> <a
+                class="ism-sitemap__info_item" href="https://www.youtube.com/@IndiaSemiconductorMission" target="_blank">YouTube</a> <a
                 class="ism-sitemap__info_item"
-                href="https://www.linkedin.com/company/indiasemiconductormission">LinkedIn</a> <a
-                class="ism-sitemap__info_item" href="https://www.instagram.com/ism_indiasemiconductor/">Instagram</a> <a
-                class="ism-sitemap__info_item" href="https://webcast.gov.in/meity/semiconindia">Webcast</a></div>
+                href="https://www.linkedin.com/company/indiasemiconductormission" target="_blank">LinkedIn</a> <a
+                class="ism-sitemap__info_item" href="https://www.instagram.com/ism_indiasemiconductor/" target="_blank">Instagram</a> <a
+                class="ism-sitemap__info_item" href="https://webcast.gov.in/meity/semiconindia" target="_blank">Webcast</a></div>
           </div>
         </div>
 
@@ -223,7 +223,7 @@
               <a class="ism-sitemap__info_item" href="#">Semiconductor Executives' Summit (SES) 2024</a>
               <a class="ism-sitemap__info_item" href="#">SemiconIndia 2023 </a>
               <a class="ism-sitemap__info_item" href="#">SemiconIndia Conference 2023 </a> 
-              <a class="ism-sitemap__info_item" href="#">Semicon India 2022</a> 
+              <a class="ism-sitemap__info_item" href="#">SemiconIndia 2022</a> 
           </div>
         </div>
         </div>
@@ -245,7 +245,7 @@
               <a class="ism-sitemap__info_item" href="#">Workshop on MEITY</a> 
               <a class="ism-sitemap__info_item" href="#">SemiconIndia 2023</a>
               <a class="ism-sitemap__info_item" href="#">SemiconIndia Conference 2023 </a> 
-              <a class="ism-sitemap__info_item" href="#">Semicon India 2022</a> 
+              <a class="ism-sitemap__info_item" href="#">SemiconIndia 2022</a> 
             </div>
           </div>
         </div>
@@ -281,20 +281,20 @@
   <footer class="ism-footer py-5">
     <div class="container">
       <div class="row">
-        <div class="col-md-4 d-flex flex-column justify-content-between mb-4">
+        <div class="col-md-4 d-flex flex-column justify-content-around mb-4">
           <div class="ism-footer-logo-link">
             <a href="/index.html">
-              <img class="img-fluid" src="images/footer/Ism_footer_logo.png" alt="">
+              <img class="img-fluid" src="images/footer/ism_footer.webp" alt="">
             </a>
           </div>
           <div class="ism-footer-logo-link">
             <a href="https://www.meity.gov.in/">
-              <img class="img-fluid" src="images/footer/meity_footer_logo.png" alt="">
+              <img class="img-fluid" src="images/footer/meity_footer.webp" alt="">
             </a>
           </div>
           <div class="ism-footer-logo-link">
             <a href="https://dic.gov.in/">
-              <img class="img-fluid" src="images/footer/Digi_india_footer_logo.png" alt="">
+              <img class="img-fluid" src="images/footer/dic_footer.webp" alt="">
             </a>
           </div>
         </div>
@@ -315,16 +315,26 @@
             <div class="ism-footer-useful-links mb-4">
               <h5 class="">Social Media</h5>
               <ul>
-                <li><a href="https://x.com/Semicon_India"><img src="images/footer/twitter_icon.png" alt="">Twitter</a>
+                <li>
+                  <a href="https://x.com/Semicon_India" target="_blank">
+                    <img src="images/footer/twitter_icon.png" alt="">Twitter</a>
                 </li>
-                <li><a href="https://www.youtube.com/@IndiaSemiconductorMission"><img
-                      src="images/footer/youtube_icon.png" alt="">Youtube</a></li>
-                <li><a href="https://www.linkedin.com/company/indiasemiconductormission/"><img
-                      src="images/footer/linkedin_icon.png" alt="">LinkedIn</a></li>
-                <li><a href="https://www.instagram.com/ism_indiasemiconductor/"><img
-                      src="images/footer/instagram_icon.png" alt="">Instagram</a></li>
-                <li><a href="https://webcast.gov.in/meity/semiconindia"><img src="images/footer/webcast_icon.png"
-                      alt="">Webcast</a></li>
+                <li>
+                  <a href="https://www.youtube.com/@IndiaSemiconductorMission" target="_blank">
+                    <img src="images/footer/youtube_icon.png" alt="">Youtube</a>
+                  </li>
+                <li>
+                  <a href="https://www.linkedin.com/company/indiasemiconductormission/" target="_blank">
+                    <img src="images/footer/linkedin_icon.png" alt="">LinkedIn</a>
+                  </li>
+                <li>
+                  <a href="https://www.instagram.com/ism_indiasemiconductor/" target="_blank">
+                    <img src="images/footer/instagram_icon.png" alt="">Instagram</a>
+                  </li>
+                <li>
+                  <a href="https://webcast.gov.in/meity/semiconindia" target="_blank">
+                    <img src="images/footer/webcast_icon.png" alt="">Webcast</a>
+                  </li>
               </ul>
             </div>
           </div>
