--- a/contact-us.html
+++ b/contact-us.html
@@ -134,7 +134,7 @@
            <li><a href="/gallery.html" class="nav__link">Gallery</a></li>
            <li><a href="/events.html" class="nav__link">Events</a></li>
            <li><a href="/faqs.html" class="nav__link">FAQs</a></li>
-           <li><a href="/contact-us.html" class="nav__link">Contact US</a></li>       
+           <li><a href="/contact-us.html" class="nav__link">Contact Us</a></li>       
         </ul>
      </div>
 
@@ -144,12 +144,12 @@
             src="images/header/ism_header_logo.png">
       </a>
       <div class="social-part">
-        <a href="https://x.com/Semicon_India"><img src="/images/header/x_header_icon.png" alt=""></a>
-        <a href="https://www.instagram.com/ism_indiasemiconductor/"><img src="/images/header/insta_header_icon.png"
+        <a href="https://x.com/Semicon_India" target="_blank"><img src="/images/header/x_header_icon.png" alt=""></a>
+        <a href="https://www.instagram.com/ism_indiasemiconductor/" target="_blank"><img src="/images/header/insta_header_icon.png"
             alt=""></a>
-        <a href="https://www.linkedin.com/company/indiasemiconductormission/"><img
+        <a href="https://www.linkedin.com/company/indiasemiconductormission/" target="_blank"><img
             src="/images/header/linkedin_header_icon.png" alt=""></a>
-        <a href="https://www.youtube.com/@IndiaSemiconductorMission"><img src="/images/header/youtube_header_icon.png"
+        <a href="https://www.youtube.com/@IndiaSemiconductorMission" target="_blank"><img src="/images/header/youtube_header_icon.png"
             alt=""></a>
       </div>
       <div class="nav__toggle" id="nav-toggle">
@@ -244,20 +244,20 @@
   <footer class="ism-footer py-5">
     <div class="container">
       <div class="row">
-        <div class="col-md-4 d-flex flex-column justify-content-between mb-4">
+        <div class="col-md-4 d-flex flex-column justify-content-around mb-4">
           <div class="ism-footer-logo-link">
             <a href="/index.html">
-              <img class="img-fluid" src="images/footer/Ism_footer_logo.png" alt="">
+              <img class="img-fluid" src="images/footer/ism_footer.webp" alt="">
             </a>
           </div>
           <div class="ism-footer-logo-link">
             <a href="https://www.meity.gov.in/">
-              <img class="img-fluid" src="images/footer/meity_footer_logo.png" alt="">
+              <img class="img-fluid" src="images/footer/meity_footer.webp" alt="">
             </a>
           </div>
           <div class="ism-footer-logo-link">
             <a href="https://dic.gov.in/">
-              <img class="img-fluid" src="images/footer/Digi_india_footer_logo.png" alt="">
+              <img class="img-fluid" src="images/footer/dic_footer.webp" alt="">
             </a>
           </div>
         </div>
@@ -277,17 +277,27 @@
             </div>
             <div class="ism-footer-useful-links mb-4">
               <h5 class="">Social Media</h5>
-              <ul>
-                <li><a href="https://x.com/Semicon_India"><img src="images/footer/twitter_icon.png" alt="">Twitter</a>
+         <ul>
+                <li>
+                  <a href="https://x.com/Semicon_India" target="_blank">
+                    <img src="images/footer/twitter_icon.png" alt="">Twitter</a>
                 </li>
-                <li><a href="https://www.youtube.com/@IndiaSemiconductorMission"><img
-                      src="images/footer/youtube_icon.png" alt="">Youtube</a></li>
-                <li><a href="https://www.linkedin.com/company/indiasemiconductormission/"><img
-                      src="images/footer/linkedin_icon.png" alt="">LinkedIn</a></li>
-                <li><a href="https://www.instagram.com/ism_indiasemiconductor/"><img
-                      src="images/footer/instagram_icon.png" alt="">Instagram</a></li>
-                <li><a href="https://webcast.gov.in/meity/semiconindia"><img src="images/footer/webcast_icon.png"
-                      alt="">Webcast</a></li>
+                <li>
+                  <a href="https://www.youtube.com/@IndiaSemiconductorMission" target="_blank">
+                    <img src="images/footer/youtube_icon.png" alt="">Youtube</a>
+                  </li>
+                <li>
+                  <a href="https://www.linkedin.com/company/indiasemiconductormission/" target="_blank">
+                    <img src="images/footer/linkedin_icon.png" alt="">LinkedIn</a>
+                  </li>
+                <li>
+                  <a href="https://www.instagram.com/ism_indiasemiconductor/" target="_blank">
+                    <img src="images/footer/instagram_icon.png" alt="">Instagram</a>
+                  </li>
+                <li>
+                  <a href="https://webcast.gov.in/meity/semiconindia" target="_blank">
+                    <img src="images/footer/webcast_icon.png" alt="">Webcast</a>
+                  </li>
               </ul>
             </div>
           </div>
