--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
            <li><a href="/gallery.html" class="nav__link">Gallery</a></li>
            <li><a href="/events.html" class="nav__link">Events</a></li>
            <li><a href="/faqs.html" class="nav__link">FAQs</a></li>
-           <li><a href="/contact-us.html" class="nav__link">Contact US</a></li>       
+           <li><a href="/contact-us.html" class="nav__link">Contact Us</a></li>       
         </ul>
      </div>
 
@@ -148,12 +148,12 @@
             src="images/header/ism_header_logo.png">
       </a>
       <div class="social-part">
-        <a href="https://x.com/Semicon_India"><img src="/images/header/x_header_icon.png" alt=""></a>
-        <a href="https://www.instagram.com/ism_indiasemiconductor/"><img src="/images/header/insta_header_icon.png"
+        <a href="https://x.com/Semicon_India" target="_blank"><img src="/images/header/x_header_icon.png" alt=""></a>
+        <a href="https://www.instagram.com/ism_indiasemiconductor/" target="_blank"><img src="/images/header/insta_header_icon.png"
             alt=""></a>
-        <a href="https://www.linkedin.com/company/indiasemiconductormission/"><img
+        <a href="https://www.linkedin.com/company/indiasemiconductormission/" target="_blank"><img
             src="/images/header/linkedin_header_icon.png" alt=""></a>
-        <a href="https://www.youtube.com/@IndiaSemiconductorMission"><img src="/images/header/youtube_header_icon.png"
+        <a href="https://www.youtube.com/@IndiaSemiconductorMission" target="_blank"><img src="/images/header/youtube_header_icon.png"
             alt=""></a>
       </div>
       <div class="nav__toggle" id="nav-toggle">
@@ -908,20 +908,20 @@
   <footer class="ism-footer py-5">
     <div class="container">
       <div class="row">
-        <div class="col-md-4 d-flex flex-column justify-content-between mb-4">
+        <div class="col-md-4 d-flex flex-column justify-content-around mb-4">
           <div class="ism-footer-logo-link">
             <a href="/index.html">
-              <img class="img-fluid" src="images/footer/Ism_footer_logo.png" alt="">
+              <img class="img-fluid" src="images/footer/ism_footer.webp" alt="">
             </a>
           </div>
           <div class="ism-footer-logo-link">
             <a href="https://www.meity.gov.in/">
-              <img class="img-fluid" src="images/footer/meity_footer_logo.png" alt="">
+              <img class="img-fluid" src="images/footer/meity_footer.webp" alt="">
             </a>
           </div>
           <div class="ism-footer-logo-link">
             <a href="https://dic.gov.in/">
-              <img class="img-fluid" src="images/footer/Digi_india_footer_logo.png" alt="">
+              <img class="img-fluid" src="images/footer/dic_footer.webp" alt="">
             </a>
           </div>
         </div>
@@ -971,14 +971,14 @@
                 <a href="mailto:ism-dic@gov.in"><img src="images/footer/mail_icon.png" alt="">ism-dic@gov.in</a>
               </li>
             </ul>
-            <div class="d-flex">
+            <div class="d-flex display-coll">
               <div class="ism-footer-iframe mt-2">
                 <iframe
                   src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3503.4426849656206!2d77.23733871489236!3d28.586493582435974!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390ce2fdedaabe87%3A0xadd98301faac65ce!2sElectronics%20Niketan%2C%20CGO%20Complex%2C%206%20Lodhi%20Road%2C%20Lodhi%20Rd%2C%20CGO%20Complex%2C%20Pragati%20Vihar%2C%20New%20Delhi%2C%20Delhi%20110003!5e0!3m2!1sen!2sin!4v1675947021093!5m2!1sen!2sin"
                   frameborder="0" height="100%">
                 </iframe>
               </div>
-              <div class="ism-footer-iframe2 mt-2 mx-2 px-2">
+              <div class="ism-footer-iframe2 mt-2 mx-1 px-1">
                 <img src="./images/new_qr_image.png" alt="">
               </div>
             </div>
