--- a/website-policies.html
+++ b/website-policies.html
@@ -135,7 +135,7 @@
            <li><a href="/gallery.html" class="nav__link">Gallery</a></li>
            <li><a href="/events.html" class="nav__link">Events</a></li>
            <li><a href="/faqs.html" class="nav__link">FAQs</a></li>
-           <li><a href="/contact-us.html" class="nav__link">Contact US</a></li>       
+           <li><a href="/contact-us.html" class="nav__link">Contact Us</a></li>       
         </ul>
      </div>
 
@@ -145,12 +145,12 @@
             src="images/header/ism_header_logo.png">
       </a>
       <div class="social-part">
-        <a href="https://x.com/Semicon_India"><img src="/images/header/x_header_icon.png" alt=""></a>
-        <a href="https://www.instagram.com/ism_indiasemiconductor/"><img src="/images/header/insta_header_icon.png"
+        <a href="https://x.com/Semicon_India" target="_blank"><img src="/images/header/x_header_icon.png" alt=""></a>
+        <a href="https://www.instagram.com/ism_indiasemiconductor/" target="_blank"><img src="/images/header/insta_header_icon.png"
             alt=""></a>
-        <a href="https://www.linkedin.com/company/indiasemiconductormission/"><img
+        <a href="https://www.linkedin.com/company/indiasemiconductormission/" target="_blank"><img
             src="/images/header/linkedin_header_icon.png" alt=""></a>
-        <a href="https://www.youtube.com/@IndiaSemiconductorMission"><img src="/images/header/youtube_header_icon.png"
+        <a href="https://www.youtube.com/@IndiaSemiconductorMission" target="_blank"><img src="/images/header/youtube_header_icon.png"
             alt=""></a>
       </div>
       <div class="nav__toggle" id="nav-toggle">
@@ -180,7 +180,7 @@
         <div class="col-sm-12">
           <div class="">
             <h2 class="sub-heading">Hyper linking Policy</h2>
-            <h3 class="main-heading mb-3"><strong class="text-capitalize">Links to external websites/portals</strong></h3>
+            <h3 class="ism-hw-2_subText mb-3">Links to external websites/portals</h3>
             <p>We do not object to you linking directly to the information that is hosted on our site, and no prior permission is required for the same. However, we would like you to inform us about any links provided to our site so that you can be informed of any changes or updates therein. Also, we do not permit our pages to be loaded into frames on your site. Our website’s pages must load into a newly opened browser window for the user.</p>
             <h2 class="sub-heading">Intellectual Property Rights Policy</h2>
             <p>The intellectual property rights of the framework, logos, website, themes, and related content, such as user manuals, FAQs, Help, Website Policies, and Terms of Use, are exclusively owned by ISM. Any use or distribution may be done with explicit permission from ISM. Any infringements of the same, any misuse or inappropriate use will be liable for prosecution.</p>
@@ -196,20 +196,20 @@
   <footer class="ism-footer py-5">
     <div class="container">
       <div class="row">
-        <div class="col-md-4 d-flex flex-column justify-content-between mb-4">
+        <div class="col-md-4 d-flex flex-column justify-content-around mb-4">
           <div class="ism-footer-logo-link">
             <a href="/index.html">
-              <img class="img-fluid" src="images/footer/Ism_footer_logo.png" alt="">
+              <img class="img-fluid" src="images/footer/ism_footer.webp" alt="">
             </a>
           </div>
           <div class="ism-footer-logo-link">
             <a href="https://www.meity.gov.in/">
-              <img class="img-fluid" src="images/footer/meity_footer_logo.png" alt="">
+              <img class="img-fluid" src="images/footer/meity_footer.webp" alt="">
             </a>
           </div>
           <div class="ism-footer-logo-link">
             <a href="https://dic.gov.in/">
-              <img class="img-fluid" src="images/footer/Digi_india_footer_logo.png" alt="">
+              <img class="img-fluid" src="images/footer/dic_footer.webp" alt="">
             </a>
           </div>
         </div>
@@ -229,17 +229,27 @@
             </div>
             <div class="ism-footer-useful-links mb-4">
               <h5 class="">Social Media</h5>
-              <ul>
-                <li><a href="https://x.com/Semicon_India"><img src="images/footer/twitter_icon.png" alt="">Twitter</a>
+         <ul>
+                <li>
+                  <a href="https://x.com/Semicon_India" target="_blank">
+                    <img src="images/footer/twitter_icon.png" alt="">Twitter</a>
                 </li>
-                <li><a href="https://www.youtube.com/@IndiaSemiconductorMission"><img
-                      src="images/footer/youtube_icon.png" alt="">Youtube</a></li>
-                <li><a href="https://www.linkedin.com/company/indiasemiconductormission/"><img
-                      src="images/footer/linkedin_icon.png" alt="">LinkedIn</a></li>
-                <li><a href="https://www.instagram.com/ism_indiasemiconductor/"><img
-                      src="images/footer/instagram_icon.png" alt="">Instagram</a></li>
-                <li><a href="https://webcast.gov.in/meity/semiconindia"><img src="images/footer/webcast_icon.png"
-                      alt="">Webcast</a></li>
+                <li>
+                  <a href="https://www.youtube.com/@IndiaSemiconductorMission" target="_blank">
+                    <img src="images/footer/youtube_icon.png" alt="">Youtube</a>
+                  </li>
+                <li>
+                  <a href="https://www.linkedin.com/company/indiasemiconductormission/" target="_blank">
+                    <img src="images/footer/linkedin_icon.png" alt="">LinkedIn</a>
+                  </li>
+                <li>
+                  <a href="https://www.instagram.com/ism_indiasemiconductor/" target="_blank">
+                    <img src="images/footer/instagram_icon.png" alt="">Instagram</a>
+                  </li>
+                <li>
+                  <a href="https://webcast.gov.in/meity/semiconindia" target="_blank">
+                    <img src="images/footer/webcast_icon.png" alt="">Webcast</a>
+                  </li>
               </ul>
             </div>
           </div>
