--- a/useful-links.html
+++ b/useful-links.html
@@ -179,78 +179,81 @@
   
         <p class="sub-heading">Semicon India</p>
         <div class="row">
-          <div class="col-12 col-md-6 col-lg-4 col-xl-3 col-xxl-3 col-xxll-3"><a class="ism-elem7__box logo-box"
-              href="https://www.semiconindia.org/" target="_blank"><img alt="logo" class="img-fluid"
-                src="./images/logos/semiiconIndia.svg">
-              <div class="caption">https://www.semiconindia.org</div>
-            </a></div>
-          <div class="col-12 col-md-6 col-lg-4 col-xl-3 col-xxl-3 col-xxll-3"><a class="ism-elem7__box logo-box"
-              href="https://www.futuredesign.semiconindia.org/" target="_blank"><img alt="logo" class="img-fluid"
-                src="./images/logos/future_design.png">
-              <div class="caption">https://www.futuredesign.semiconindia.org/</div>
-            </a></div>
-          <div class="col-12 col-md-6 col-lg-4 col-xl-3 col-xxl-3 col-xxll-3"><a class="ism-elem7__box logo-box"
-              href="https://chips-dli.gov.in/" target="_blank"><img alt="logo" class="img-fluid"
-                src="./images/logos/Screenshot 2024-11-18 142438.png">
-              <div class="caption">https://chips-dli.gov.in/</div>
-            </a></div>
+          <div class="col-12 col-md-6 col-lg-4 col-xl-3 col-xxl-3 col-xxll-3">
+            <a class="ism-logo-box" href="https://www.semiconindia.org/" target="_blank">
+              <img alt="logo" class="img-fluid" src="./images/logos/semiiconIndia.svg">
+              <div class="web-link-box">https://www.semiconindia.org</div>
+            </a>
+          </div>
+          <div class="col-12 col-md-6 col-lg-4 col-xl-3 col-xxl-3 col-xxll-3">
+            <a class="ism-logo-box" href="https://www.futuredesign.semiconindia.org/" target="_blank">
+              <img alt="logo" class="img-fluid" src="./images/logos/future_design.png">
+              <div class="web-link-box">https://www.futuredesign.semiconindia.org/</div>
+            </a>
+          </div>
+          <div class="col-12 col-md-6 col-lg-4 col-xl-3 col-xxl-3 col-xxll-3">
+            <a class="ism-logo-box" href="https://chips-dli.gov.in/" target="_blank">
+              <img alt="logo" class="img-fluid" src="./images/logos/Screenshot 2024-11-18 142438.png">
+              <div class="web-link-box">https://chips-dli.gov.in/</div>
+            </a>
+          </div>
         </div>
 
    
         <p class="sub-heading my-4">MEITY </p>
         <div class="row">
-          <div class="col-12 col-md-6 col-lg-4 col-xl-3 col-xxl-3 col-xxll-3"><a class="ism-elem7__box logo-box"
+          <div class="col-12 col-md-6 col-lg-4 col-xl-3 col-xxl-3 col-xxll-3"><a class="ism-logo-box"
               href="https://www.meity.gov.in/" target="_blank"><img alt="logo" class="img-fluid"
                 src="./images/logos/meity-logo-2.png">
-              <div class="caption">https://www.meity.gov.in/</div>
+              <div class="web-link-box">https://www.meity.gov.in/</div>
             </a></div>
-          <div class="col-12 col-md-6 col-lg-4 col-xl-3 col-xxl-3 col-xxll-3"><a class="ism-elem7__box logo-box"
+          <div class="col-12 col-md-6 col-lg-4 col-xl-3 col-xxl-3 col-xxll-3"><a class="ism-logo-box"
               href="https://dic.gov.in/" target="_blank"><img alt="logo" class="img-fluid"
                 src="./images/logos/digitalindia.svg">
-              <div class="caption">https://dic.gov.in/</div>
+              <div class="web-link-box">https://dic.gov.in/</div>
             </a></div>
-          <div class="col-12 col-md-6 col-lg-4 col-xl-3 col-xxl-3 col-xxll-3"><a class="ism-elem7__box logo-box"
+          <div class="col-12 col-md-6 col-lg-4 col-xl-3 col-xxl-3 col-xxll-3"><a class="ism-logo-box"
               href="https://www.mygov.in/" target="_blank"><img alt="logo" class="img-fluid"
                 src="./images/logos/mygov.svg">
-              <div class="caption">https://www.mygov.in/</div>
+              <div class="web-link-box">https://www.mygov.in/</div>
             </a></div>
-            <div class="col-12 col-md-6 col-lg-4 col-xl-3 col-xxl-3 col-xxll-3"><a class="ism-elem7__box logo-box"
+            <div class="col-12 col-md-6 col-lg-4 col-xl-3 col-xxl-3 col-xxll-3"><a class="ism-logo-box"
               href="https://negd.gov.in/" target="_blank"><img alt="logo" class="img-fluid"
                 src="./images/logos/negd.png">
-              <div class="caption">https://negd.gov.in/</div>
+              <div class="web-link-box">https://negd.gov.in/</div>
             </a></div>
-            <div class="col-12 col-md-6 col-lg-4 col-xl-3 col-xxl-3 col-xxll-3"><a class="ism-elem7__box logo-box"
+            <div class="col-12 col-md-6 col-lg-4 col-xl-3 col-xxl-3 col-xxll-3"><a class="ism-logo-box"
               href="https://www.meity.gov.in/esdm/pli/" target="_blank"><img alt="logo" class="img-fluid"
                 src="./images/logos/pli.svg">
-              <div class="caption">https://www.meity.gov.in/esdm/pli/</div>
+              <div class="web-link-box">https://www.meity.gov.in/esdm/pli/</div>
             </a></div>
-            <div class="col-12 col-md-6 col-lg-4 col-xl-3 col-xxl-3 col-xxll-3"><a class="ism-elem7__box logo-box"
+            <div class="col-12 col-md-6 col-lg-4 col-xl-3 col-xxl-3 col-xxll-3"><a class="ism-logo-box"
               href="https://www.cdac.in/" target="_blank"><img alt="logo" class="img-fluid"
                 src="./images/logos/cdac-logo.png">
-              <div class="caption">https://www.cdac.in/</div>
+              <div class="web-link-box">https://www.cdac.in/</div>
             </a></div>
         </div>
         <p class="sub-heading my-4">Others</p>
         <div class="row">
-          <div class="col-12 col-md-6 col-lg-4 col-xl-3 col-xxl-3 col-xxll-3"><a class="ism-elem7__box logo-box"
+          <div class="col-12 col-md-6 col-lg-4 col-xl-3 col-xxl-3 col-xxll-3"><a class="ism-logo-box"
               href="https://www.iesaonline.org/" target="_blank"><img alt="logo" class="img-fluid"
                 src="./images/logos/iesa_logo.png">
-              <div class="caption">https://www.iesaonline.org/</div>
+              <div class="web-link-box">https://www.iesaonline.org/</div>
             </a></div>
-          <div class="col-12 col-md-6 col-lg-4 col-xl-3 col-xxl-3 col-xxll-3"><a class="ism-elem7__box logo-box"
+          <div class="col-12 col-md-6 col-lg-4 col-xl-3 col-xxl-3 col-xxll-3"><a class="ism-logo-box"
               href="https://www.icea.org.in/" target="_blank"><img alt="logo" class="img-fluid"
                 src="./images/logos/icea.jpg">
-              <div class="caption">https://www.icea.org.in/</div>
+              <div class="web-link-box">https://www.icea.org.in/</div>
             </a></div>
-          <div class="col-12 col-md-6 col-lg-4 col-xl-3 col-xxl-3 col-xxll-3"><a class="ism-elem7__box logo-box"
+          <div class="col-12 col-md-6 col-lg-4 col-xl-3 col-xxl-3 col-xxll-3"><a class="ism-logo-box"
               href="https://elcina.com/" target="_blank"><img alt="logo" class="img-fluid"
                 src="./images/logos/1689488297_86e6d2b9-45ab-4bb2-91b0-e5a44bbfd875.jpg">
-              <div class="caption">https://elcina.com/</div>
+              <div class="web-link-box">https://elcina.com/</div>
             </a></div>
-            <div class="col-12 col-md-6 col-lg-4 col-xl-3 col-xxl-3 col-xxll-3"><a class="ism-elem7__box logo-box"
+            <div class="col-12 col-md-6 col-lg-4 col-xl-3 col-xxl-3 col-xxll-3"><a class="ism-logo-box"
               href="https://www.ifciltd.com/" target="_blank"><img alt="logo" class="img-fluid"
                 src="./images/logos/ifci-logo-2.png">
-              <div class="caption">https://www.ifciltd.com/</div>
+              <div class="web-link-box">https://www.ifciltd.com/</div>
             </a></div>
         </div>
       </div>
