header active donw

--- a/about-semicon.html
+++ b/about-semicon.html
@@ -93,8 +93,8 @@
             </ul>
          </li>
          <li class="dropdown__item">
-          <div class="nav__link">
-            SemiconIndia <i class="ri-arrow-down-s-line dropdown__arrow"></i>
+          <div class="nav__link"><span class="header_active__link">
+            SemiconIndia <i class="ri-arrow-down-s-line dropdown__arrow"></i></span>
           </div>           
           <ul class="dropdown__menu">               
              <li><a class="dropdown__link" href="/about-semicon.html">About SemiconIndia</a></li>
@@ -120,24 +120,24 @@
       </div>
       <ul class="dropdown__menu">
          <li>
-            <a class="dropdown__link"  href="#">Notices</a>                          
+            <a class="dropdown__link"  href="/notices.html">Notices</a>                          
          </li>
 
          <li>
-            <a href="#" class="dropdown__link">Tenders</a>
+            <a href="/tenders.html" class="dropdown__link">Tenders</a>
          </li>
          <li>
-            <a href="#" class="dropdown__link">Downloads</a>
+            <a href="/downloads.html" class="dropdown__link">Downloads</a>
          </li>
          <li>
-          <a href="#" class="dropdown__link">Careers</a>
+          <a href="/career.html" class="dropdown__link">Careers</a>
        </li>
       </ul>
    </li>
-           <li><a href="#" class="nav__link">Gallery</a></li>
-           <li><a href="#" class="nav__link">Events</a></li>
-           <li><a href="#" class="nav__link">FAQs</a></li>
-           <li><a href="#" class="nav__link">Contact US</a></li>       
+           <li><a href="gallery.html" class="nav__link">Gallery</a></li>
+           <li><a href="/events.html" class="nav__link">Events</a></li>
+           <li><a href="/faqs.html" class="nav__link">FAQs</a></li>
+           <li><a href="/contact-us.html" class="nav__link">Contact US</a></li>       
         </ul>
      </div>
 
