--- a/contact-us.html
+++ b/contact-us.html
@@ -134,7 +134,7 @@
            <li><a href="/gallery.html" class="nav__link">Gallery</a></li>
            <li><a href="/events.html" class="nav__link">Events</a></li>
            <li><a href="/faqs.html" class="nav__link">FAQs</a></li>
-           <li><a href="/contact-us.html" class="nav__link">Contact Us</a></li>       
+           <li><a href="/contact-us.html" class="nav__link"> <span class="header_active__link">Contact Us</span></a></li>       
         </ul>
      </div>
 
@@ -199,7 +199,7 @@
                   <td>011-24301865</td>
                 </tr>
                 <tr>
-                  <td>CEO, ISM</td>
+                  <td>Office of CEO</td>
                   <td>
                   </td>
                   <td><a href="mailto:ceo@ism.gov.in">ceo@ism.gov.in</a></td>
