--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
      <!--=============== NAV MENU ===============-->
      <div class="nav__menu" id="nav-menu">
         <ul class="nav__list">
-           <li><a href="/index.html" class="nav__link">Home</a></li>
+           <li><a href="/index.html" class="nav__link"><span class="header_active__link">Home</span></a></li>
            <li class="dropdown__item">
             <div class="nav__link">
               About ISM <i class="ri-arrow-down-s-line dropdown__arrow"></i>
