--- a/notices.html
+++ b/notices.html
@@ -116,8 +116,8 @@
         </ul>
      </li>
      <li class="dropdown__item">
-      <div class="nav__link">
-        Notifications <i class="ri-arrow-down-s-line dropdown__arrow"></i>
+      <div class="nav__link">   <span class="header_active__link">
+        Notifications <i class="ri-arrow-down-s-line dropdown__arrow"></i></span>
       </div>
       <ul class="dropdown__menu">
          <li>
