--- a/design-link-scheme.html
+++ b/design-link-scheme.html
@@ -102,8 +102,8 @@
           </ul>
        </li>
        <li class="dropdown__item">
-        <div class="nav__link">
-          Schemes <i class="ri-arrow-down-s-line dropdown__arrow"></i>
+        <div class="nav__link"><span class="header_active__link">
+          Schemes <i class="ri-arrow-down-s-line dropdown__arrow"></i></span>
         </div>           
         <ul class="dropdown__menu">
            <li><a class="dropdown__link" href="/semiconductor-scheme.html">Semiconductor Fabs</a></li>
