--- a/faqs.html
+++ b/faqs.html
@@ -134,7 +134,7 @@
    </li>
            <li><a href="/gallery.html" class="nav__link">Gallery</a></li>
            <li><a href="/events.html" class="nav__link">Events</a></li>
-           <li><a href="/faqs.html" class="nav__link">FAQs</a></li>
+           <li><a href="/faqs.html" class="nav__link"> <span class="header_active__link">FAQs</span></a></li>
            <li><a href="/contact-us.html" class="nav__link">Contact Us</a></li>       
         </ul>
      </div>
