--- a/gallery.html
+++ b/gallery.html
@@ -132,7 +132,7 @@
        </li>
       </ul>
    </li>
-           <li><a href="/gallery.html" class="nav__link">Gallery</a></li>
+           <li><a href="/gallery.html" class="nav__link"> <span class="header_active__link">Gallery</span></a></li>
            <li><a href="/events.html" class="nav__link">Events</a></li>
            <li><a href="/faqs.html" class="nav__link">FAQs</a></li>
            <li><a href="/contact-us.html" class="nav__link">Contact Us</a></li>       
