--- a/semiconductor-scheme.html
+++ b/semiconductor-scheme.html
@@ -103,9 +103,9 @@
           </ul>
        </li>
        <li class="dropdown__item">
-        <div class="nav__link">
-          Schemes <i class="ri-arrow-down-s-line dropdown__arrow"></i>
-        </div>           
+        <div class="nav__link"><span class="header_active__link">
+          Schemes <i class="ri-arrow-down-s-line dropdown__arrow"></i></span>
+        </div>            
         <ul class="dropdown__menu">
            <li><a class="dropdown__link" href="/semiconductor-scheme.html">Semiconductor Fabs</a></li>
            <li><a class="dropdown__link" href="/display-scheme.html">Display Fabs</a></li>
